# px-api

./: CHANGELOG.md  LICENSE.txt  README.md
asyncapi/: px-api.yaml
asyncapi/examples/: api_check_version_request.json  api_check_version_response.json  api_ping_request.json  api_ping_response.json  api_version_request.json  api_version_response.json  backup_create_request.json  backup_create_response.json  backup_restore_request.json  backup_restore_response.json  device_find_me_request.json  device_find_me_response.json  device_get_time_request.json  device_get_time_response.json  device_power_off_request.json  device_power_off_response.json  device_power_on_request.json  device_power_on_response.json  device_reboot_request.json  device_reboot_response.json  device_reset_request.json  device_reset_response.json  device_set_time_request.json  device_set_time_response.json  diagnostics_get_request.json  diagnostics_get_response.json  logs_get_request.json  logs_get_response.json  logs_set_level_request.json  logs_set_level_response.json  metrics_subscribe_request.json  metrics_unsubscribe_request.json  preset_apply_request.json  preset_apply_response.json  preset_clear_request.json  preset_clear_response.json  preset_create_request.json  preset_create_response.json  preset_show_request.json  preset_show_response.json  (+20 more)
clients/python/: README.md  __init__.py  example.py  py_client.py  pyproject.toml
clients/typescript/: client.ts  path-types.ts
docs/: 01-api-reference.md  02-configuration-guide.md  03-device-management.md  04-preset-guide.md  05-best-practices.md  README.md
schemas/: README.md  catalog.json  japi_path_registry.json
schemas/changes/: Setup.Change.json  Setup.Changed.json
schemas/definitions/: ArrayDelayTimeType.json  ArrayFirFilter.json  ArrayProcessing.json  ArrayProcessingPatch.json  ArrayProcessingView.json  AudioInputView.json  AudioOutputView.json  AudioSetupView.json  ChannelPreset.json  ChannelPresetFirFilter.json  ChannelPresetVersion.json  ClipLimiter.json  ClipLimiterMode.json  ClipLimiterPatch.json  Crossover.json  CrossoverPatch.json  CrossoverType.json  Equalizer.json  (+92 more)
tools/: README.md  install.bat  install.sh
tools/japi_cli/: README.md  japi_cli.py  japi_cli_base.py  japi_cli_interactive.py  pyproject.toml  requirements.txt  setup_completion.sh  test_interactive.py
tools/japi_cli/docs/: BATCH_UPDATE.md  batch_set_all_audio.md
tools/japi_cli/examples/: backup_restore.sh  basic_setup.sh  batch_audio.sh  boot_diagnostics.sh  configure_eq.sh  interactive_mode.sh  monitor.sh
tools/japi_cli/groups/: __init__.py  api.py  backup.py  device.py  diagnostics.py  logs.py  metrics.py  preset.py  setup.py  split_setup.py  status.py
tools/japi_cli/groups/setup_commands/: __init__.py  batch.py  input.py  matrix.py  setters.py  speaker.py  system.py
tools/japi_cli/test/: README.md  japi_cli_test_discovery.py  japi_cli_test_structured.py
(+102 files in other folders)
